[package]
name = "chunked_transfer_encoding"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Chunked transfer encoding"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/transfer-encoding-rs"
homepage = "https://github.com/bk-rs/transfer-encoding-rs"
documentation = "https://docs.rs/chunked_transfer_encoding"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http = { version = "0.2", default-features = false, optional = true }
