[package]
name = "chunked_transfer_encoding"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Chunked transfer encoding"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/transfer-encoding-rs"
homepage = "https://github.com/bk-rs/transfer-encoding-rs"
documentation = "https://docs.rs/chunked_transfer_encoding"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["stream"]

stream = ["futures-util", "pin-project-lite"]

_priv_test_http = ["http"]

[dependencies]
http = { version = "0.2", default-features = false, optional = true }

futures-util = { version = "0.3", default-features = false, optional = true }
pin-project-lite = { version = "0.2", optional = true }

[dev-dependencies]
futures-executor = { version = "0.3" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
